--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
 @import "colors.css";
 @import "fonts.css";
 @import "headers.css";
+@import "icons.css";
 @import "img.css";
 @import "lists.css";
 @import "paged.css";
