Allow opening in Safari by using KaTeX.

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
 @import "block.css";
 @import "colors.css";
 @import "fonts.css";
+@import "formula.css";
 @import "headers.css";
 @import "icons.css";
 @import "img.css";
