--- a/css/headers.css
+++ b/css/headers.css
@@ -75,25 +75,32 @@ h1.emu-chapter-heading {
     background-image: url("../img/_default/HEADER_BG.svg");
     background-size: 100%;
     background-repeat: repeat;
-}
 
-/* Styles for emu heading document id and name */
-span.emu-heading-doc-id,
-span.emu-heading-doc-name {
-    font-size: var(--body-font-size);
-    color: var(--primary);
-    -webkit-text-stroke-width: 0;
-    -webkit-text-fill-color: var(--primary);
+    counter-increment: emu-chap-idx;
 
-    &.emu-heading-doc-name {
-        color: var(--primary-light);
-        -webkit-text-fill-color: var(--primary-light);
-        string-set: doc-id content(text);
+    /* Styles for emu heading document id and name */
+    span.emu-heading-doc-id {
+        font-size: var(--body-font-size);
+        color: var(--primary);
+        -webkit-text-stroke-width: 0;
+        -webkit-text-fill-color: var(--primary);
     }
-}
 
-span.emu-chapter-name {
-    string-set: chap-name content(text);
+    span.emu-heading-doc-name {
+        color: var(--primary-light);
+        font-size: var(--body-font-size);
+        -webkit-text-stroke-width: 0;
+        string-set: emu-doc-id content(text);
+    }
+
+    span.emu-chapter-name {
+        string-set: emu-chap-name content(text);
+
+        &::before {
+            content: counter(emu-chap-idx, upper-alpha);
+            margin-right: 1ch;
+        }
+    }
 }
 
 /* Styles for h2 and h3 */
