--- a/css/paged.css
+++ b/css/paged.css
@@ -53,7 +53,7 @@
         font-size: var(--small-font-size);
         padding: 5mm;
         color: var(--35-gray);
-        content: string(doc-id) " - " string(chap-name);
+        content: string(emu-doc-id) " - " string(emu-chap-name);
     }
 }
 
