--- a/css/lists.css
+++ b/css/lists.css
@@ -24,18 +24,12 @@ ol {
     list-style: none inside none;
 
     li::before {
-        background-image: url('../img/_default/emu_ordered.svg');
-        background-repeat: no-repeat;
-        background-position: center;
         display: inline-block;
-        height: 1.25em;
-        width: 1.25em;
-        padding: 0.1em 1ch 0.1em 0.5ch;
+        padding: 0 0.5ch;
         content: attr(data-item-num);
 
         font-family: "FNT-Bold";
-        color: white;
-
+        color: var(--tertiary);
         vertical-align: middle;
     }
 }
