--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,11 @@ div.emu-body-container {
     font-family: var(--sans-serif);
 }
 
-table:not(.emu-img-table, .emu-title-table) {
+table:not(.emu-img-table) {
     border: 0.5mm solid black;
     border-collapse: collapse;
     padding-left: 3mm;
+    break-inside: avoid;
 
     th {
         border-bottom: 0.5mm solid black;
